--- a/ZenithCulinary/pay.css
+++ b/ZenithCulinary/pay.css
@@ -85,6 +85,19 @@ body {
     display: flex;
     justify-content: space-between;
   }
+
+  #paymentBtn{
+  border: none;
+  color: green;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+}
   
   /* Footer Stili */
   .footer {
