--- a/ZenithCulinary/admin.css
+++ b/ZenithCulinary/admin.css
@@ -45,6 +45,12 @@ h2 {
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+.contacts {
+    background-color: #F5F5DC;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
 table {
     width: 100%;
